# sb-server-rs

./: Cargo.toml  Rocket.toml  test-db.db
src/: main.rs
src/routes/: auth.rs
src/schema/: applications.rs  attachments.rs  audit_logs.rs  backup_codes.rs  bans.rs  categories.rs  channels.rs  client_release.rs  config.rs  connected_accounts.rs  connection_config.rs  embed_cache.rs  emojis.rs  guilds.rs  invites.rs  member_roles.rs  members.rs  message_channel_mentions.rs  message_role_mentions.rs  message_stickers.rs  message_user_mentions.rs  messages.rs  migrations.rs  mod.rs  notes.rs  prelude.rs  rate_limits.rs  read_states.rs  recipients.rs  relationships.rs  roles.rs  security_keys.rs  security_settings.rs  sessions.rs  sticker_packs.rs  stickers.rs  team_members.rs  teams.rs  templates.rs  user_settings.rs  (+4 more)
